feat(user-func): add optional email_notification_enabled for wallet-instances
