# apps/io-wallet-user-func/src/wallet-instance-request.ts
@@ -7,6 +7,7 @@ import { deleteNonce, NonceEnvironment } from "./nonce";
 
 const WalletInstanceRequest = t.type({
   challenge: NonEmptyString,
+  emailNotificationEnabled: t.boolean,
   fiscalCode: FiscalCode,
   hardwareKeyTag: NonEmptyString,
   keyAttestation: NonEmptyString,
